Bugs and crashes about "make links modifers" function. #30496

Closed
opened 2012-03-09 01:08:54 +01:00 by Sebastien Loss · 4 comments

%%%Official Blender 2.62 for linux 64bit on Fedora 16

Simple to reproduce : open a fresh blender add one particles
modifier/system to the default cube.

Add somewhere another object.
Select it and add to the selection the default cube (active object).
Finally press CTRL+L -> "make links" -> "modifiers".

Observations following the other object type:

  • with camera, it's OK. Link is just ignored.

  • with a lamp, lattice, empty or mball another instance of the particles modifier is actually attached and show a ghost instance at the default cube location with the cube shape but without particles initial speed.

  • with curve, surface and text, blender simply crashes. (Maybe here it could works...there are meshes at the end..no?)

Obviously these modifier associations don't make sense and should not be possible.
It's easy to include a "lostinparticles" point lamp or construction curve into selection before making particles modifier links...

Thx to make blender better and better. Bye%%%

%%%Official Blender 2.62 for linux 64bit on Fedora 16 Simple to reproduce : open a fresh blender add one particles modifier/system to the default cube. Add somewhere another object. Select it and add to the selection the default cube (active object). Finally press CTRL+L -> "make links" -> "modifiers". Observations following the other object type: - with camera, it's OK. Link is just ignored. - with a lamp, lattice, empty or mball another instance of the particles modifier is actually attached and show a ghost instance at the default cube location with the cube shape but without particles initial speed. - with curve, surface and text, blender simply crashes. (Maybe here it could works...there are meshes at the end..no?) Obviously these modifier associations don't make sense and should not be possible. It's easy to include a "lostinparticles" point lamp or construction curve into selection before making particles modifier links... Thx to make blender better and better. Bye%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Particles can't work with non-mesh object yet. Will look into this issue.%%%

%%%Particles can't work with non-mesh object yet. Will look into this issue.%%%

%%%Fixed in svn rev44834. Thanks for the report, closing.%%%

%%%Fixed in svn rev44834. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30496
No description provided.