source/blender/blenkernel/BKE_object.h
@@ -67,6 +67,8 @@ void update_base_layer(struct Scene *scene, struct Object *ob);
 void free_object(struct Object *ob);
 void object_free_display(struct Object *ob);
 
+int object_support_modifier_type(struct Object *ob, int modifier_type);
+
 void object_link_modifiers(struct Object *ob, struct Object *from);
 void object_free_modifiers(struct Object *ob);
 
